--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,19 @@ logging.logback.rollingpolicy.max-history=180
 # 1-default(localhost) other-filepathset path
 filepath.type=1
 filepath.path=
+# mysql
+# Do not submit IP address!!!
+spring.datasource.url=jdbc:p6spy:mysql://localhost:3306/xitem?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+# Do not submit password!!!
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
+# actable
+actable.table.auto=update
+actable.model.pack=com.xxsowrd.xitem.admin.entity
+actable.database.type=mysql
+mybatis-plus.mapper-locations=classpath*:com/gitee/sunchenbin/mybatis/actable/mapping/*/*.xml
+# multipart
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=1024MB
