--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-server.port=8088
+server.port=9091
 server.servlet.context-path=/xitem
 # logging file path
 logging.file.name=./logs/run.log
@@ -24,3 +24,14 @@ mybatis-plus.mapper-locations=classpath*:com/gitee/sunchenbin/mybatis/actable/ma
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=256MB
 spring.servlet.multipart.max-request-size=1024MB
+#freemarker
+spring.freemarker.request-context-attribute:ctx
+spring.freemarker.cache=true
+spring.freemarker.check-template-location=true
+spring.freemarker.charset=UTF-8
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=false
+spring.freemarker.expose-session-attributes=false
+spring.freemarker.expose-spring-macro-helpers=false
+spring.freemarker.suffix=.ftl
+spring.freemarker.settings.number_format=0.###############
