--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
             <version>2.0.49</version>
@@ -67,9 +72,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.gitee.sunchenbin.mybatis.actable</groupId>
-            <artifactId>mybatis-enhance-actable</artifactId>
-            <version>1.5.0.RELEASE</version>
+            <groupId>com.xxsowrd.xitem</groupId>
+            <artifactId>mybatis-actable-upgrade</artifactId>
+            <version>1.5.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.baomidou</groupId>
