因为actable对字符集的判断不严谨，导致会重复设置表的字符集，所以删除对表的字符集控制注释，让数据库决定表的字符集。

--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.xxsowrd.xitem</groupId>
+            <groupId>com.xxsword.xitem</groupId>
             <artifactId>mybatis-actable-upgrade</artifactId>
-            <version>1.5.1</version>
+            <version>1.5.2</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.baomidou</groupId>
