--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,7 +15,7 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 # actable
 actable.table.auto=update
-actable.model.pack=com.xxsowrd.xitem.admin.entity
+actable.model.pack=com.xxsword.xitem.admin.entity
 actable.database.type=mysql
 mybatis-plus.mapper-locations=classpath*:com/gitee/sunchenbin/mybatis/actable/mapping/*/*.xml
 # multipart
