--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,7 +17,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.minimum-idle=10
 # actable
 actable.table.auto=update
-actable.model.pack=com.xxsowrd.xitem.admin.entity
+actable.model.pack=com.xxsword.xitem.admin.entity
 actable.database.type=mysql
 mybatis-plus.mapper-locations=classpath*:com/gitee/sunchenbin/mybatis/actable/mapping/*/*.xml
 # multipart
