功能更新，bug修复。

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@ server.servlet.context-path=/xitem
 # logging file path
 logging.file.name=./logs/run.log
 logging.logback.rollingpolicy.max-history=180
-# 1-default(localhost) other-filepathset path
-filepath.type=1
-filepath.path=
+# 1-default(localhost) 2-filepathset path
+filepath.type=2
+filepath.path=D:\\lll
 # mysql
 # Do not submit IP address!!!
 spring.datasource.url=jdbc:p6spy:mysql://localhost:3306/xitem?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
