--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/xitem
 # logging file path
 logging.file.name=./logs/run.log
 logging.logback.rollingpolicy.max-history=180
-# 1-default(localhost) other-filepathset path
+# 1-default(localhost) 2-filepathset path
 filepath.type=1
 filepath.path=
 # mysql
