--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,7 +17,7 @@ spring.datasource.driver-class-name=com.p6spy.engine.spy.P6SpyDriver
 #spring.datasource.hikari.minimum-idle=10
 # actable
 actable.table.auto=update
-actable.model.pack=com.xxsword.xitem.admin.domain.entity
+actable.model.pack=com.xxsword.xitem.admin.domain.*.entity
 actable.database.type=mysql
 mybatis-plus.mapper-locations=classpath*:com/gitee/sunchenbin/mybatis/actable/mapping/*/*.xml
 # multipart
