--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>xitem</description>
     <properties>
         <java.version>1.8</java.version>
+        <poi.version>5.2.5</poi.version>
     </properties>
     <dependencies>
 
@@ -70,6 +71,18 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
             <version>1.12.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>${poi.version}</version>
         </dependency>
 
         <dependency>
