--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>xitem</description>
     <properties>
         <java.version>1.8</java.version>
+        <zxing.version>3.5.3</zxing.version>
         <poi.version>5.2.5</poi.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
     </properties>
@@ -72,6 +73,19 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
             <version>1.12.0</version>
+        </dependency>
+
+        <!-- zxing生成二维码 -->
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>${zxing.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>${zxing.version}</version>
         </dependency>
 
         <dependency>
