功能更新，bug修复。

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -37,3 +37,6 @@ spring.freemarker.suffix=.ftl
 spring.freemarker.settings.number_format=0.###############
 # scheduling
 scheduling.enabled=true
+# redis
+spring.redis.host=localhost
+spring.redis.port=6379
